Format the Base64Test file to meet our standards